# blind-vision-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSES_THIRD_PARTY.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi-publish.yml
docs/: compatible_clients.md  installation.md  usage.md
docs/superpowers/plans/: 2026-06-14-local-multimodal-mcp-implementation.md
docs/superpowers/specs/: 2026-06-14-local-multimodal-mcp-design.md
mcp_server/: config.py  server.py  tools.py
models/: generation.py  litert_vision.py  manager.py  vision.py
tests/: conftest.py  test_generation.py  test_tools.py  test_vision.py
utils/: image_utils.py  prompt_optimizer.py
